--- a/WpfApp/VsPlayerControl.xaml
+++ b/WpfApp/VsPlayerControl.xaml
@@ -1,23 +1,21 @@
 ﻿<UserControl x:Class="WpfApp.VsPlayerControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local ="clr-namespace:WpfApp"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="333" d:DesignWidth="336">
-    
+
     <Border BorderThickness="3" BorderBrush="BlanchedAlmond" CornerRadius="7"
             Padding="1" Margin="0,0,0,5">
         <StackPanel x:Name="Players">
             <Border>
-                <TextBlock x:Name="tableNr" Text="Table: XX" 
-                           FontSize="22" FontWeight="Bold" TextAlignment="Center"
-                           />
+                <TextBlock x:Name="tableNr" Text="Table: XX"
+                           FontSize="22" FontWeight="Bold" TextAlignment="Center" />
             </Border>
-            <local:PlayerControl/>
-            <local:PlayerControl/>
+            <local:PlayerControl />
+            <local:PlayerControl />
         </StackPanel>
     </Border>
-    
 </UserControl>
